[package]
name = "nes"
version = "0.1.0"
authors = ["Andrew Christiansen <andrewtaylorchristiansen@gmail.com>"]
description = "A generic, no_std NES emulator"
keywords = ["nes", "embedded", "no_std"]
categories = ["no-std"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2", features=["unproven"] }
embedded-graphics = "0.7.1"

[features]
debug = []
